--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
     <div class="container">
         <h1>Task Managment Application</h1>
         <h3>This simple application helps you to manage, organise and track the progress of your task in one place </h3>
-        <p>Click <a href="/pages/login.html">here</a> to login or create your own account</a></p>
+        <p>Click <a href="/pages/login.html">here</a> to login or create your own account now</a></p>
     </div>
     
 </body>
