edited dev branch

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <title>Home Page</title>
     <style>
         body{
-            background-color: aliceblue;
+            background-color: greenyellow;
         }
         h1{
             color: aquamarine;
@@ -25,6 +25,8 @@
         <h3>This simple application helps you to manage, organise and track the progress of your task in one place </h3>
         <p>Click <a href="/pages/login.html">here</a> to login or create your own account now</a></p>
     </div>
-    
+    <footer>
+        <span>This is Development Branch</span>
+    </footer>
 </body>
 </html>
