--- a/public/index.html
+++ b/public/index.html
@@ -21,8 +21,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>Task Managment Application</h1>
-        <h3>This simple application helps you to manage, organise and track the progress of your task in one place </h3>
+        <h1>Health Managment Application</h1>
+        <h3>This simple application helps you to manage, organise and track the progress of your patients in one place </h3>
         <p>Click <a href="/pages/login.html">here</a> to login or create your own account now</a></p>
     </div>
     
