--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
         <p>Click <a href="/pages/login.html">here</a> to login or create your own account now</a></p>
     </div>
     <footer>
-        <span>This is Development Branch With Computeshere build</span>
+        <span>This is Development Branch That is deployed on EC2</span>
     </footer>
 </body>
 </html>
